# app/Models/Employee.php
@@ -10,8 +10,20 @@ class Employee extends Model
     use HasFactory;
     protected $quarded = false;
 
+    protected $fillable = [
+        'name',
+        'last_name',
+        'patronymic',
+        'position_id',
+        'address_id',
+        'passport_data',
+        'photo_path',
+    ];
+
     public function position()
     {
         return $this->belongsTo(Position::class);
     }
+
+
 }
